--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -12,14 +12,20 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 
 # application.properties
-management.datadog.metrics.export.api-key=7307f3938106a1f4078a5ea553f0d661
-management.metrics.export.datadog.application-key=65a7726a659fdeaa1e515c721bb4ea86e04ef759
-management.metrics.export.datadog.enabled=true
-management.metrics.export.datadog.uri=https://api.datadoghq.eu
-management.endpoints.web.exposure.include=health,info,metrics
-management.metrics.export.datadog.step=20s
+management.datadog.metrics.export.enabled=true
+management.datadog.metrics.export.step=5s
+# management.datadog.metrics.export.api-key=env
+# management.datadog.metrics.export.application-key=env
+management.datadog.metrics.export.uri=https://api.datadoghq.eu
+
+management.metrics.tags.service=employee-service
+management.metrics.tags.env=dev
+management.metrics.tags.version=1.0.0
+management.metrics.tags.source=java
 management.metrics.use-global-registry=true
-management.metrics.export.datadog.tags=service:web,env:prod,version:1
+
+management.endpoints.web.exposure.include=health,info,metrics
+
 
 
 
